@@ -1,3 +1,10 @@
+2007-11-13  Peter Bloomfield  <pbloomfield@bellsouth.net>
+
+        * src/window.c: (meta_window_save_user_rect): new helper, saves
+        only unmaximized dimensions, and not when fullscreen.
+        (meta_window_move_resize_internal,
+        meta_window_move_resize_request): use it.  (#461927)
+
 2007-11-11  Thomas Thurman  <thomas@thurman.org.uk>
 
         * configure.in: Post-release bump to 2.21.2.
